2008-07-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclParse.c: fixing incomplete reversion of "fix" for
	[Bug 2017583], missing TclResetCancellation call. 

2008-07-15  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclBasic.c (Tcl_CancelEval): Fix blunder. [Bug 2018603]

	* doc/DictObj.3: Fix error in example. [Bug 2016740]

	* generic/tclNamesp.c (EnsembleUnknownCallback): Factor out some of
	the more complex parts of the ensemble code to make it easier to
	understand and hence to permit tighter compilation of code on the
	critical path.

2008-07-14  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclParse.c: reverting the "fix" for [Bug 2017583],
	* tests/parse.test:   numLevel management and TclInterpReady check
	                      seems to be necessary after all.
	
2008-07-14  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclProc.c (TclNRApplyObjCmd, TclObjInterpProcCore): 
	* generic/tclBasic.c (TclNR_AddCallback, TclEvalObjv_NR2): 
	* generic/tclNRE.h (TEOV_callback): Change the callback storage type
	to use an array, so guaranteeing correct inter-member spacing and
	memory layout.

2008-07-14  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  Remove unneeded TclInterpReady calls
	* generic/tclParse.c:
	
	* generic/tclBasic.c.:   Embedded Tcl_Canceled() calls into
	* generic/tclExecute.c:  TclInterpReady().
	* generic/tclParse.c:     
	
	* generic/tclVar.c: fix error message
	
	* generic/tclParse.c: remove unnecessary numLevel management 
	* tests/parse.test:   [Bug 2017583]
	
	* generic/tclBasic.c.:   NRE left too many calls to 
	* generic/tclExecute.c:  TclResetCancellation lying around: it
	* generic/tclProc.c:     only needs to be called prior to any
	                         iPtr->numLevels++. Thanks mistachkin.
	
	* generic/tclBasic.c: TclResetCancellation() calls were misplaced
	(merge mishap); stray //. Thanks patthoyts.
	
	* generic/tclInt.h: the new macros TclSmallAlloc and TclSmallFree